# hyperstat-arb-bot

./: .gitignore  Draft.txt  INTEGRATION_GUIDE.md  READ.me.md  README.md  hyperstat_v2_analysis.md  pyproject.toml  requirements-ml.txt
DRAFT/: integration_snippets.py  test_cost_modelbis.py
apps/: analyse.py  analysev2.py  dashboard.py  live_dashboard.py  realtime_sim.py
configs/: default.yaml  hyperliquid_mainnet.yaml  hyperliquid_testnet.yaml  strategy_stat_arb.yaml
data/candles/ARB/: 5m.parquet
data/candles/AVAX/: 5m.parquet
data/candles/BTC/: 5m.parquet
data/candles/ETH/: 5m.parquet
data/candles/OP/: 5m.parquet
data/candles/SOL/: 5m.parquet
data/funding/ARB/: 8h.parquet
data/funding/AVAX/: 8h.parquet
data/funding/BTC/: 8h.parquet
data/funding/ETH/: 8h.parquet
data/funding/OP/: 8h.parquet
data/funding/SOL/: 8h.parquet
scripts/: build_universe.py  download_history.py  fetch_candles.py  run_live.sh  walk_forward_validation.py
src/hyperstat/: __init__.py  main.py
src/hyperstat/agents/: __init__.py  base_agent.py  orchestrator.py  prediction_agent.py  regime_agent.py  sentiment_agent.py  supervisor.py
src/hyperstat/backtest/: __init__.py  costs.py  engine.py  engine_funding_fix.py  engine_v2_patch.py  metrics.py  reports.py
src/hyperstat/cli/: __init__.py  commands.py
src/hyperstat/core/: clock.py  credentials.py  logging.py  math.py  risk.py  types.py
src/hyperstat/data/: __init__.py  (+4 more)
streamlit/: config.toml
tests/: test_agents_smoke.py  test_cost_model.py  test_projection_neutral.py  test_strategy_smoke.py  test_v2_modules.py
(+38 files in other folders)
